feat: get all shortened URLs for home page
