# src/index.ts
@@ -49,18 +49,48 @@ async function main() {
 
   app.post('/url', async (req: express.Request, res: express.Response) => {
     req.log.info('request received')
-    const url = await urlController.shortenUrl(req.body.url)
-    res.status(200).json({
-      url,
-    })
+
+    try {
+      const url = await urlController.shortenUrl(req.body.url)
+      res.status(200).json({
+        url,
+      })
+    } catch (e) {
+      res.status(500).send((e as Error).message)
+    }
+  })
+
+  app.get('/url', async (req: express.Request, res: express.Response) => {
+    req.log.info('request received')
+    let limit = 10
+    let skip = 0
+
+    if (req.query) {
+      limit = Number(req.query['limit'])
+      skip = Number(req.query['skip'])
+    }
+
+    try {
+      const urls = await urlController.getUrls(limit, skip)
+      res.status(200).json({
+        urls,
+      })
+    } catch (e) {
+      res.status(500).send((e as Error).message)
+    }
   })
 
   app.get('/:alias', async (req: express.Request, res: express.Response) => {
     req.log.info('request received')
-    const url = await urlController.getOriginalUrl(req.params.alias)
-    if (!url) return res.sendStatus(404)
 
-    res.redirect(url)
+    try {
+      const url = await urlController.getOriginalUrl(req.params.alias)
+      if (!url) return res.sendStatus(404)
+
+      res.status(200).json({ url })
+    } catch (e) {
+      res.status(500).send((e as Error).message)
+    }
   })
 
   app.listen(port, () => {
