# src/url/controller.ts
@@ -3,6 +3,13 @@ import { IUrlService } from './service'
 export interface IUrlController {
   shortenUrl(url: string): Promise<string>
   getOriginalUrl(id: string): Promise<string>
+  getUrls(limit: number, skip: number): Promise<IUrlHttpObjects[]>
+}
+
+interface IUrlHttpObjects {
+  alias: string
+  original: string
+  createdAt: string
 }
 
 export class UrlController implements IUrlController {
@@ -15,8 +22,24 @@ export class UrlController implements IUrlController {
   }
 
   public getOriginalUrl = async (id: string) => {
-    const originalUrl = this.urlService.getUrl(id)
+    const originalUrl = await this.urlService.getUrl(id)
 
     return originalUrl
+  }
+
+  public getUrls = async (limit: number, skip: number) => {
+    const urls = await this.urlService.getUrls(limit, skip)
+
+    const response: IUrlHttpObjects[] = []
+
+    for (const u of urls) {
+      response.push({
+        alias: u.alias,
+        original: u.original,
+        createdAt: u.createdAt.toISOString(),
+      })
+    }
+
+    return response
   }
 }
